--- a/win_svc/ImageRenderService/packages.config
+++ b/win_svc/ImageRenderService/packages.config
@@ -3,6 +3,12 @@
   <package id="cef.redist.x64" version="3.2987.1601" targetFramework="net452" />
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net452" />
   <package id="CefSharp.OffScreen" version="57.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
+  <package id="NServiceBus" version="6.2.0" targetFramework="net452" />
+  <package id="NServiceBus.Callbacks" version="1.1.1" targetFramework="net452" />
+  <package id="NServiceBus.Persistence.Sql" version="2.1.0" targetFramework="net452" />
+  <package id="NServiceBus.Persistence.Sql.MsBuild" version="2.1.0" targetFramework="net452" developmentDependency="true" />
+  <package id="NServiceBus.RabbitMQ" version="4.3.1" targetFramework="net452" />
+  <package id="RabbitMQ.Client" version="4.1.0" targetFramework="net452" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
 </packages>
