--- a/win_svc/ImageRenderService/App.config
+++ b/win_svc/ImageRenderService/App.config
@@ -6,11 +6,13 @@
 
     <appSettings>
       <add key="Service.Name" value="BlueprintImageGen" />
+      <add key="BrowserPool.Enabled" value="true" />
       <add key="BrowserPool.MaxSize" value="10" />
       <add key="BrowserPool.WaitTimeSeconds" value="10" />
       <add key="BrowserResizeEvent.MaxWaitTimeSeconds" value="10" />
       <add key="BrowserResizeEvent.DelayIntervalMilliseconds" value="10" />
       <add key="BrowserRender.DelayMilliseconds" value="500" />
+      <add key="BrowserRender.WaitTimeSeconds" value="10" />
       
     </appSettings>
   
