--- a/win_svc/ImageRenderService/App.config
+++ b/win_svc/ImageRenderService/App.config
@@ -11,6 +11,8 @@
       <add key="BrowserResizeEvent.MaxWaitTimeSeconds" value="10" />
       <add key="BrowserResizeEvent.DelayIntervalMilliseconds" value="10" />
       <add key="BrowserRender.DelayMilliseconds" value="500" />
+      <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;username=admin;password=$admin2011" />
+      <add key="NServiceBus.InstanceId" value="1" />
       
     </appSettings>
   
