--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -35,7 +35,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -114,44 +113,19 @@
     <Compile Include="Controllers\InstanceController.cs" />
     <Compile Include="Controllers\JobsController.cs" />
     <Compile Include="Controllers\LogController.cs" />
-    <Compile Include="Helpers\GroupMapper.cs" />
-    <Compile Include="Helpers\GroupsHelper.cs" />
-    <Compile Include="Helpers\UserConverter.cs" />
-    <Compile Include="Helpers\PrivilegesManager.cs" />
-    <Compile Include="Helpers\UserValidator.cs" />
-    <Compile Include="Models\AdminRole.cs" />
-    <Compile Include="Models\Enums\LicenseType.cs" />
-    <Compile Include="Models\Enums\SortOrder.cs" />
-    <Compile Include="Models\Enums\UserOperationMode.cs" />
-    <Compile Include="Models\Group.cs" />
-    <Compile Include="Models\GroupDto.cs" />
-    <Compile Include="Models\OperationScope.cs" />
-    <Compile Include="Models\DeleteResult.cs" />
-    <Compile Include="Models\Sorting.cs" />
-    <Compile Include="Models\TabularData.cs" />
-    <Compile Include="Models\UpdateUserPassword.cs" />
-    <Compile Include="Models\UserDto.cs" />
     <Compile Include="Helpers\EmailHelper.cs" />
     <Compile Include="Helpers\HashingUtilities.cs" />
     <Compile Include="Helpers\JobsValidationHelper.cs" />
     <Compile Include="Helpers\LdapHelper.cs" />
     <Compile Include="Helpers\LoginInfo.cs" />
     <Compile Include="Helpers\PasswordValidationHelper.cs" />
-    <Compile Include="Helpers\UserMapper.cs" />
-    <Compile Include="Helpers\UsersHelper.cs" />
     <Compile Include="Models\ApplicationSettings.cs" />
-    <Compile Include="Models\Data.cs" />
     <Compile Include="Models\EmailConfigInstanceSettings.cs" />
     <Compile Include="Models\InstanceItem.cs" />
-    <Compile Include="Models\Pagination.cs" />
     <Compile Include="Models\PasswordRecoveryToken.cs" />
-    <Compile Include="Models\QueryResult.cs" />
     <Compile Include="Models\ResetPasswordContent.cs" />
     <Compile Include="Models\ResetPostContent.cs" />
-    <Compile Include="Models\TableSettings.cs" />
-    <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserIcon.cs" />
-    <Compile Include="Models\UserLicense.cs" />
     <Compile Include="Repositories\ApplicationSettingsRepository.cs" />
     <Compile Include="Repositories\ISettingsRepository.cs" />
     <Compile Include="Controllers\LicensesController.cs" />
@@ -175,15 +149,13 @@
     <Compile Include="Repositories\AuthenticationRepository.cs" />
     <Compile Include="Repositories\IAuthenticationRepository.cs" />
     <Compile Include="Repositories\ILdapRepository.cs" />
-    <Compile Include="Repositories\IInstanceRepository.cs" />
-    <Compile Include="Repositories\IPrivilegesRepository.cs" />
+    <Compile Include="Repositories\ISqlInstanceRepository.cs" />
     <Compile Include="Repositories\ISqlSettingsRepository.cs" />
-    <Compile Include="Repositories\IUserRepository.cs" />
+    <Compile Include="Repositories\ISqlUserRepository.cs" />
     <Compile Include="Repositories\Jobs\IJobsRepository.cs" />
     <Compile Include="Repositories\Jobs\JobsRepository.cs" />
     <Compile Include="Repositories\LdapRepository.cs" />
     <Compile Include="Repositories\SqlInstanceRepository.cs" />
-    <Compile Include="Repositories\SqlPrivilegesRepository.cs" />
     <Compile Include="Repositories\SqlSettingsRepository.cs" />
     <Compile Include="Repositories\SqlUserRepository.cs" />
     <Compile Include="Saml\BpSaml2SecurityTokenHandler.cs" />
