--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Models\PropertyTypePredefined.cs" />
     <Compile Include="Models\RelationshipResultSet.cs" />
     <Compile Include="Models\ReviewRelationshipResultSet.cs" />
+    <Compile Include="Models\Review\ArtifactReviewDetails.cs" />
     <Compile Include="Models\Review\ReviewArtifactsStatus.cs" />
     <Compile Include="Models\Review\ReviewParticipant.cs" />
     <Compile Include="Models\Review\ReviwerRole.cs" />
