--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -179,7 +179,7 @@
     <Compile Include="Repositories\ILdapRepository.cs" />
     <Compile Include="Repositories\IInstanceRepository.cs" />
     <Compile Include="Repositories\IPrivilegesRepository.cs" />
-    <Compile Include="Repositories\ISqlGroupRepository.cs" />
+    <Compile Include="Repositories\IGroupRepository.cs" />
     <Compile Include="Repositories\ISqlSettingsRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
     <Compile Include="Repositories\Jobs\IJobsRepository.cs" />
