--- a/win_svc/ImageRenderService/App.config
+++ b/win_svc/ImageRenderService/App.config
@@ -12,8 +12,7 @@
       <add key="BrowserResizeEvent.MaxWaitTimeSeconds" value="10" />
       <add key="BrowserResizeEvent.DelayIntervalMilliseconds" value="10" />
       <add key="BrowserRender.DelayMilliseconds" value="500" />
-      <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;username=admin;password=$admin2011" />
-      <add key="NServiceBus.InstanceId" value="1" />
+      <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=test;username=admin;password=$admin2011" />
       <add key="BrowserRender.WaitTimeSeconds" value="10" />
       
     </appSettings>
