TFS# 6646:[Reviews][Experience][Server Side] Table of Contents - REST API Calls - added new models (TableOfContent and TableOfContentItem) - added new REST API; - added new methods to controller; - updated unit tests

--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Models\Review\ReviewedArtifactDetails.cs" />
     <Compile Include="Models\Review\ReviewPackageStatus.cs" />
     <Compile Include="Models\Review\ReviewParticipant.cs" />
+    <Compile Include="Models\Review\ReviewTableOfContent.cs" />
     <Compile Include="Models\Review\ReviwerRole.cs" />
     <Compile Include="Models\Review\ReviewContainer.cs" />
     <Compile Include="Models\Review\ReviewContent.cs" />
