--- a/win_svc/ImageRenderService.Tests/packages.config
+++ b/win_svc/ImageRenderService.Tests/packages.config
@@ -5,4 +5,6 @@
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net452" />
   <package id="CefSharp.OffScreen" version="57.0.0" targetFramework="net452" />
   <package id="Moq" version="4.7.8" targetFramework="net452" />
+  <package id="NServiceBus" version="6.0.0" targetFramework="net452" />
+  <package id="NServiceBus.Testing" version="6.0.2" targetFramework="net452" />
 </packages>
