--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -162,6 +162,8 @@
     <Compile Include="Repositories\SqlProjectMetaRepository.cs" />
     <Compile Include="Repositories\SqlRelationshipsRepository.cs" />
     <Compile Include="Repositories\SqlReviewsRepository.cs" />
+    <Compile Include="Repositories\Workflow\ISqlWorkflowRepository.cs" />
+    <Compile Include="Repositories\Workflow\SqlWorkflowRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
@@ -177,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\Workflow\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lib\HtmlLibrary\HtmlLibrary.csproj">
