--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -128,17 +128,16 @@
     <Compile Include="Models\PropertyTypePredefined.cs" />
     <Compile Include="Models\RelationshipResultSet.cs" />
     <Compile Include="Models\ReviewRelationshipResultSet.cs" />
-    <Compile Include="Models\Review\ArtifactReviewDetails.cs" />
+    <Compile Include="Models\Review\ReviewArtifactDetails.cs" />
     <Compile Include="Models\Review\ApprovalType.cs" />
-    <Compile Include="Models\Review\ReviewArtifact.cs" />
+    <Compile Include="Models\Review\BaseReviewArtifact.cs" />
+    <Compile Include="Models\Review\ReviewArtifactsDataSet.cs" />
     <Compile Include="Models\Review\ReviewArtifactsStatus.cs" />
-    <Compile Include="Models\Review\ReviewDetails.cs" />
-    <Compile Include="Models\Review\ReviewedArtifactDetails.cs" />
     <Compile Include="Models\Review\ReviewPackageStatus.cs" />
     <Compile Include="Models\Review\ReviewParticipant.cs" />
     <Compile Include="Models\Review\ReviewTableOfContent.cs" />
     <Compile Include="Models\Review\ReviwerRole.cs" />
-    <Compile Include="Models\Review\ReviewContainer.cs" />
+    <Compile Include="Models\Review\ReviewSummary.cs" />
     <Compile Include="Models\Review\ReviewContent.cs" />
     <Compile Include="Models\Review\ReviewSource.cs" />
     <Compile Include="Models\Review\ReviewStatus.cs" />
