--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Helpers\GroupMapper.cs" />
     <Compile Include="Helpers\GroupsHelper.cs" />
+    <Compile Include="Helpers\GroupValidator.cs" />
     <Compile Include="Helpers\PaginationValidator.cs" />
     <Compile Include="Helpers\UserConverter.cs" />
     <Compile Include="Helpers\PrivilegesManager.cs" />
