--- a/win_svc/ImageRenderService/packages.config
+++ b/win_svc/ImageRenderService/packages.config
@@ -3,6 +3,11 @@
   <package id="cef.redist.x64" version="3.2987.1601" targetFramework="net452" />
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net452" />
   <package id="CefSharp.OffScreen" version="57.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
   <package id="NServiceBus" version="6.2.0" targetFramework="net452" />
   <package id="NServiceBus.Callbacks" version="1.1.1" targetFramework="net452" />
