change version to 8.1.1.0 for lego patch

--- a/svc/db/AdminStorage/AdminStorage.csproj
+++ b/svc/db/AdminStorage/AdminStorage.csproj
@@ -136,6 +136,15 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>7.4.1.0.sql</LastGenOutput>
     </Content>
+    <Content Include="Migration\8.1.1.0\8.1.1.0.sql">
+      <DependentUpon>8.1.1.0.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Content>
+    <Content Include="Migration\8.1.1.0\8.1.1.0.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>8.1.1.0.sql</LastGenOutput>
+    </Content>
     <Content Include="Migration\8.1.0.0\8.1.0.0.sql">
       <DependentUpon>8.1.0.0.tt</DependentUpon>
       <AutoGen>True</AutoGen>
