--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Models\ReviewRelationshipResultSet.cs" />
     <Compile Include="Models\Review\AddArtifactsParameter.cs" />
     <Compile Include="Models\Review\AddArtifactsResult.cs" />
+    <Compile Include="Models\Review\BaseReviewArtifactsContent.cs" />
     <Compile Include="Models\Review\ReviewArtifactDetails.cs" />
     <Compile Include="Models\Review\ApprovalType.cs" />
     <Compile Include="Models\Review\BaseReviewArtifact.cs" />
