--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -134,7 +134,7 @@
     <Compile Include="Models\Review\ReviewArtifactDetails.cs" />
     <Compile Include="Models\Review\ApprovalType.cs" />
     <Compile Include="Models\Review\BaseReviewArtifact.cs" />
-    <Compile Include="Models\Review\ReviewedArtifactsResult.cs" />
+    <Compile Include="Models\Review\ReviewedArtifact.cs" />
     <Compile Include="Models\Review\ReviewArtifactsStatus.cs" />
     <Compile Include="Models\Review\ReviewPackageStatus.cs" />
     <Compile Include="Models\Review\ReviewParticipant.cs" />
