--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -126,7 +126,7 @@
     <Compile Include="Models\CreateResult.cs" />
     <Compile Include="Models\Enums\LicenseType.cs" />
     <Compile Include="Models\Enums\SortOrder.cs" />
-    <Compile Include="Models\Enums\UserOperationMode.cs" />
+    <Compile Include="Models\Enums\OperationMode.cs" />
     <Compile Include="Models\Group.cs" />
     <Compile Include="Models\GroupDto.cs" />
     <Compile Include="Models\OperationScope.cs" />
