--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Factories\ImpactAnalysisFactory.cs" />
     <Compile Include="Impl\AdminRole.cs" />
     <Compile Include="Impl\QueryResult.cs" />
+    <Compile Include="InstanceAdminModel\CustomInstanceAdminRole.cs" />
     <Compile Include="ModelHelpers\DocumentArtifactWrapper.cs" />
     <Compile Include="ModelHelpers\ProcessArtifactWrapper.cs" />
     <Compile Include="NovaModel\Components\OperationsResults\ReviewContent.cs" />
