--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -108,6 +108,7 @@
     <Compile Include="NovaModel\Components\ImpactAnalysisService\ImpactAnalysisNode.cs" />
     <Compile Include="NovaModel\Components\ImpactAnalysisService\ImpactAnalysisResult.cs" />
     <Compile Include="NovaModel\Components\ImpactAnalysisService\ImpactAnalysisTree.cs" />
+    <Compile Include="NovaModel\Reviews\Enums\ApprovalType.cs" />
     <Compile Include="NovaModel\Reviews\ReviewArtifactDetails.cs" />
     <Compile Include="NovaModel\Reviews\Enums\ReviewerRole.cs" />
     <Compile Include="NovaModel\Reviews\Enums\ReviewPackageStatus.cs" />
@@ -152,6 +153,8 @@
     <Compile Include="NovaModel\Components\RapidReview\ArtifactWithProperties.cs" />
     <Compile Include="NovaModel\Components\RapidReview\UseCase.cs" />
     <Compile Include="NovaModel\Reviews\Enums\ReviewParticipantRole.cs" />
+    <Compile Include="NovaModel\Reviews\ReviewTableOfContent.cs" />
+    <Compile Include="NovaModel\Reviews\ReviewTableOfContentItem.cs" />
     <Compile Include="OpenApiModel\UserModel\Results\UserCallResultCollection.cs" />
     <Compile Include="Impl\LicenseUsage.cs" />
     <Compile Include="OpenApiModel\Services\OpenApi.cs" />
