--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -78,7 +78,7 @@
     <Compile Include="InstanceAdminModel\CustomInstanceAdminRole.cs" />
     <Compile Include="ModelHelpers\DocumentArtifactWrapper.cs" />
     <Compile Include="ModelHelpers\ProcessArtifactWrapper.cs" />
-    <Compile Include="NovaModel\Components\OperationsResults\ReviewContent.cs" />
+    <Compile Include="NovaModel\Reviews\ReviewContent.cs" />
     <Compile Include="ArtifactModel\Impl\RaptorComment.cs" />
     <Compile Include="ArtifactModel\Impl\NovaCollectionBase.cs" />
     <Compile Include="ArtifactModel\Impl\CollectionItem.cs" />
