add GetReviewedArtifacts, add endpoints to summary of some Review related methods, add golden data test for GetReviewedArtifacts

--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -78,6 +78,7 @@
     <Compile Include="InstanceAdminModel\CustomInstanceAdminRole.cs" />
     <Compile Include="ModelHelpers\DocumentArtifactWrapper.cs" />
     <Compile Include="ModelHelpers\ProcessArtifactWrapper.cs" />
+    <Compile Include="NovaModel\Reviews\ApprovalType.cs" />
     <Compile Include="NovaModel\Reviews\BaseReviewArtifact.cs" />
     <Compile Include="NovaModel\Reviews\ReviewContent.cs" />
     <Compile Include="ArtifactModel\Impl\RaptorComment.cs" />
@@ -118,6 +119,7 @@
     <Compile Include="NovaModel\Reviews\Enums\ReviewStatus.cs" />
     <Compile Include="NovaModel\Reviews\Enums\ReviewType.cs" />
     <Compile Include="NovaModel\Reviews\ReviewArtifactsStatus.cs" />
+    <Compile Include="NovaModel\Reviews\ReviewedArtifact.cs" />
     <Compile Include="NovaModel\Reviews\ReviewSource.cs" />
     <Compile Include="NovaModel\Reviews\ReviewSummary.cs" />
     <Compile Include="NovaModel\Reviews\ReviewParticipant.cs" />
@@ -156,6 +158,7 @@
     <Compile Include="NovaModel\Components\RapidReview\ArtifactWithProperties.cs" />
     <Compile Include="NovaModel\Components\RapidReview\UseCase.cs" />
     <Compile Include="NovaModel\Reviews\Enums\ReviewParticipantRole.cs" />
+    <Compile Include="NovaModel\Reviews\ViewStateType.cs" />
     <Compile Include="OpenApiModel\UserModel\Results\UserCallResultCollection.cs" />
     <Compile Include="Impl\LicenseUsage.cs" />
     <Compile Include="OpenApiModel\Services\OpenApi.cs" />
