--- a/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
+++ b/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Controllers\RelationshipsControllerTests.cs" />
     <Compile Include="Controllers\StatusControllerTests.cs" />
     <Compile Include="Controllers\ArtifactControllerTests.cs" />
+    <Compile Include="Controllers\WorkflowControllerTests.cs" />
     <Compile Include="Helpers\MentionHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\SqlArtifactRelationshipsRepositoryTests.cs" />
