--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -80,7 +80,7 @@
     <Compile Include="ModelHelpers\ProcessArtifactWrapper.cs" />
     <Compile Include="NovaModel\Reviews\ApprovalType.cs" />
     <Compile Include="NovaModel\Reviews\BaseReviewArtifact.cs" />
-    <Compile Include="NovaModel\Reviews\ReviewContent.cs" />
+    <Compile Include="NovaModel\Reviews\ReviewArtifact.cs" />
     <Compile Include="ArtifactModel\Impl\RaptorComment.cs" />
     <Compile Include="ArtifactModel\Impl\NovaCollectionBase.cs" />
     <Compile Include="ArtifactModel\Impl\CollectionItem.cs" />
