--- a/blueprint-automationframework/Blueprint-Tests/Tests/OpenAPITests/OpenAPITests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/OpenAPITests/OpenAPITests.csproj
@@ -60,7 +60,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArtifactTests.cs" />
+    <Compile Include="ArtifactTests\ArtifactImageTests.cs" />
     <Compile Include="CreateUsersTests.cs" />
     <Compile Include="DeleteUserTests.cs" />
     <Compile Include="LoginTests.cs" />
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
