--- a/win_svc/ImageRenderService/ImageRenderService.csproj
+++ b/win_svc/ImageRenderService/ImageRenderService.csproj
@@ -157,6 +157,7 @@
     </Compile>
     <Compile Include="Annotations\Annotations.cs" />
     <Compile Include="ApiServiceController.cs" />
+    <Compile Include="Logging\LoggerDefinition.cs" />
     <Compile Include="Logging\ServiceLocator.cs" />
     <Compile Include="Logging\IStackTraceProvider.cs" />
     <Compile Include="Logging\Log4NetStandardLogEntryFormatter.cs" />
