US6673: Redirect log output from the console to the logging system.

--- a/win_svc/ImageRenderService/App.config
+++ b/win_svc/ImageRenderService/App.config
@@ -5,11 +5,12 @@
   </configSections>
   <log4net>
     <root>
+      <!-- Valid values are All < Debug < Info < Warn < Error < Fatal < Off -->
       <level value="ALL" />
       <appender-ref ref="ServerFileAppender" />
     </root>
     <appender name="ServerFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="BlueprintImageGenService.log" />
+      <file value="Log\BlueprintImageGenService.log" />
       <appendToFile value="true" />
       <!-- Use a minimal locking model that allows multiple processes to write to the same file -->
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
