--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -78,6 +78,9 @@
     <Compile Include="InstanceAdminModel\CustomInstanceAdminRole.cs" />
     <Compile Include="ModelHelpers\DocumentArtifactWrapper.cs" />
     <Compile Include="ModelHelpers\ProcessArtifactWrapper.cs" />
+    <Compile Include="ModelHelpers\UserAdapter.cs" />
+    <Compile Include="NovaModel\AdminStoreModel\DeleteResult.cs" />
+    <Compile Include="NovaModel\AdminStoreModel\OperationScope.cs" />
     <Compile Include="NovaModel\Reviews\ApprovalType.cs" />
     <Compile Include="NovaModel\Reviews\BaseReviewArtifact.cs" />
     <Compile Include="NovaModel\Reviews\ReviewArtifact.cs" />
