US6673: Changed the logging settings for the production, made staring and stopping of the self host web server safe.

--- a/win_svc/ImageRenderService/App.config
+++ b/win_svc/ImageRenderService/App.config
@@ -6,7 +6,7 @@
   <log4net>
     <root>
       <!-- Valid values are All < Debug < Info < Warn < Error < Fatal < Off -->
-      <level value="ALL" />
+      <level value="Warn" />
       <appender-ref ref="ServerFileAppender" />
     </root>
     <appender name="ServerFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -44,9 +44,6 @@
       <add key="BrowserRender.DelayMilliseconds" value="500" />
       <add key="NServiceBus.ConnectionString" value="host=titan.blueprintsys.net;virtualhost=test;username=admin;password=$admin2011" />
       <add key="BrowserRender.WaitTimeSeconds" value="10" />
-      <!-- LOGGING SECTION BEGINS -->
-      <!-- Path to log4net configuration -->
-      <add key="LoggingConfigurationPath" value="Configuration\Logging.config" />
     </appSettings>
   
   <runtime>
