--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -160,6 +160,7 @@
     <Compile Include="NovaModel\Components\RapidReview\ArtifactWithProperties.cs" />
     <Compile Include="NovaModel\Components\RapidReview\UseCase.cs" />
     <Compile Include="NovaModel\Reviews\Enums\ReviewParticipantRole.cs" />
+    <Compile Include="NovaModel\Reviews\ReviewSummary.cs" />
     <Compile Include="NovaModel\Reviews\ReviewTableOfContent.cs" />
     <Compile Include="NovaModel\Reviews\ReviewTableOfContentItem.cs" />
     <Compile Include="NovaModel\Reviews\ViewStateType.cs" />
