Adds InstanceAdminChangePassword tests

--- a/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="JobResultFileTests.cs" />
     <Compile Include="JobsTests.cs" />
     <Compile Include="LicensesTests.cs" />
+    <Compile Include="UsersTests\InstanceAdminChangePasswordTests.cs" />
     <Compile Include="UsersTests\GetInstanceRolesTests.cs" />
     <Compile Include="UsersTests\GetInstanceUsersTests.cs" />
     <Compile Include="UsersTests\UpdateInstanceUsersTests.cs" />
